# sindricad

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  index.html  node_modules  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/: FUNDING.yml
.github/actions/linux-deps/: action.yml
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  IMPROVEMENT-AUDIT.md  PACKAGING.md  PROTOCOL.md
evals/: LOOP-TARGETS.md  MANIFEST.sha256  RULES.md  baseline.json  loop-targets.json
evals/harness/: ts_strict.sh  tsconfig.strict.json
evals/reports/: fillet-chamfer-2026-07-12.md  ts-strict-2026-07-12.md
norn/: ledger.jsonl  manifest.json  protocol.md
norn/baseline/: selector_tuning.json
packaging/: 99-spacemouse.rules  setup-spacemouse.sh
scripts/: build-sidecar-runtime.ps1  build-sidecar-runtime.sh
sidecar/: builder.py  exporters.py  geom_select.py  geomstore.py  mesh_writers.py  occt_smp.py  project3mf.py  pyproject.toml  selector_tuning.json  server.py  spike_color3mf.py  tessellate.py  test_checkpoint.py  test_fullstack.py  test_geomstore.py  test_selector_v2.py  test_smoke.py  test_text.py  test_texture.py  test_ws.py  texture.py
sidecar/tools/: bench_rebuild.py  corpus_fillet.json  corpus_fillet_regression.json  e2e_coverage.py  eval_fillet_corpus.py  eval_selector_survival.py  gen_fillet_corpus.py  gen_fillet_regression.py  gen_manybodies.py  gen_selector_corpus.py  golden.json  golden_corpus.py  harness_util.py  test_selector_eval_math.py
sidecar/tools/bench/: rebuild_baseline.json  textured_box.sindri
sidecar/tools/corpus/: corpus_selectors.json
src/: main.ts  styles.css  types.ts
src-tauri/: .taurignore  Cargo.toml  Entitlements.plist  tauri.bundle.conf.json  tauri.conf.json  tauri.macos-sign.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: geom.rs  lib.rs  main.rs  printer.rs  sidecar.rs  slicer.rs  spacemouse.rs  tinkeratlas.rs
src/diagnostics/: breadcrumbs.ts
src/document/: example.ts  store.test.ts  store.ts
src/features/: edgeFeatureTool.ts  extrudeTool.ts  featureStarters.ts  manipulator.ts  measureTool.ts  moveTool.ts  planeOffsetTool.ts  pressPullTool.ts  sectionTool.ts  texturePanel.ts  textureTool.ts
src/geometry/: client.ts  tauriClient.ts
src/input/: keymap.ts  shortcuts.ts  spacemouse.ts
src/io/: files.ts  recentFiles.ts  recovery.ts
src/print/: printDialog.ts  printFlow.ts  printStatusLine.ts  printerClient.ts
src/sketch/: arc.test.ts  arc.ts  constraintTools.ts  dimInput.ts  entityDims.test.ts  entityDims.ts  geom2d.test.ts  geom2d.ts  id.ts  modify.ts  overlay.ts  pattern.test.ts  pattern.ts  patternFlow.ts  plane.test.ts  plane.ts  region.test.ts  region.ts  resolve.test.ts  resolve.ts  sketchDimensions.ts  sketchMode.ts  sketchSolve.ts  snap.test.ts  snap.ts  solver.ts  spline.test.ts  spline.ts  textCache.ts  textPanel.ts
src/tinkeratlas/: account.ts  client.ts  publish.ts
src/ui/: browserTree.ts  bugReporter.ts  choice.ts  commandPalette.ts  commands.ts  contextMenus.ts  escape.ts  featureMeta.ts  focus.ts  icons.ts  inspector.ts  menu.ts  panels.ts  prompt.ts  ribbon.ts  sketchPalette.ts  spaceMouseSettings.ts  timeline.ts  toast.ts  units.ts  updates.ts  welcome.ts
src/viewport/: cameras.ts  dispose.ts  edgeMatch.test.ts  edgeMatch.ts  highlight.ts  overlays.ts  picking.ts  render.ts  scene.ts  viewCube.ts  viewport.ts
