[package]
name = "sindricad"
version = "0.1.0"
description = "SindriCAD — a parametric CAD app driving build123d"
authors = ["MakerViking"]
edition = "2021"
rust-version = "1.77"
license = "AGPL-3.0-only"

[lib]
name = "sindricad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
libc = "0.2"
hidapi = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Printer device layer (printer.rs): LAN Moonraker HTTP client. No TLS features —
# printers are plain-HTTP on the local network; keeps the dep light.
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
# explicit for the status-monitor task's sleep; tauri already runs the tokio rt.
tokio = { version = "1", features = ["time"] }
# Geometry-in-Rust spike: link the SYSTEM OCCT (default-features=false disables the
# from-source `builtin` build). Requires OCCT >= 7.8 installed (Arch: `opencascade`).
# Published 0.2.0 (2023) can't system-link cleanly & its vendored OCCT 7.8 won't
# configure under cmake 4. Upstream `main` targets OCCT 7.8 and does not compile
# against system OCCT 7.9.3 (TopoDS class→namespace etc.), so we vendor a local
# fork under third_party/ patched for 7.9.
opencascade = { path = "../third_party/opencascade-rs/crates/opencascade", default-features = false }
opencascade-sys = { path = "../third_party/opencascade-rs/crates/opencascade-sys", default-features = false }
# glam re-exported by opencascade for DVec3 used in the document->geometry mapping.
# MUST match the fork's glam (0.24) so DVec3 unifies across the crate boundary.
glam = "0.24"
# 3MF export: OCCT has no 3MF writer (only STEP/STL/IGES via the fork). build123d
# uses its Mesher for 3MF; we instead tessellate the solid and write the mesh as a
# 3MF (zip of 3D model XML) via this crate. Mirrors sidecar/exporters.py's 3mf path.
threemf = "0.8"
